@@ -803,7 +803,7 @@ class TestUploadUsersView(unittest.TestCase):
         self.assertEqual(profile.organization, 'Not much')
         self.assertEqual(profile.location, 'Down yonder')
         self.assertEqual(profile.country, 'US and A')
-        self.assertEqual(profile.website, 'http://example.com')
+        self.assertEqual(profile.websites, ['http://example.com'])
         self.assertEqual(profile.languages, 'Turkish, Ebonics')
         self.assertEqual(profile.office, '1234')
         self.assertEqual(profile.room_no, '12')
@@ -821,7 +821,7 @@ class TestUploadUsersView(unittest.TestCase):
         self.assertEqual(profile.organization, 'A little')
         self.assertEqual(profile.location, 'Over there')
         self.assertEqual(profile.country, 'US and A')
-        self.assertEqual(profile.website, 'http://example.com')
+        self.assertEqual(profile.websites, [])
         self.assertEqual(profile.languages, 'Magyar, Klingon')
         self.assertEqual(profile.office, '4321')
         self.assertEqual(profile.room_no, '21')
